css/main.css
@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
@import url('https://fonts.googleapis.com/css?family=Raleway:200');

body, html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

body {

  font-family: Roboto;
  font-size: 16px;
  line-height: 1.25em;
  color: #e5e4d7;
}

h1, h2, h3, h4, h5 {
  margin: 23px;
  text-align: center;
}

/* The hero image */
.hero-image {
    /* The image used */
    background-image: url(../images/denzelprsmall.jpg);

    /* Set a specific height */
    height: 100%;

    /* Position and center the image to scale nicely on all screens */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    display: flex;
    animation: 1s fadein 1.2s forwards;
    opacity: 0;
}
@keyframes fadein {
  100% {
    opacity: 1;
  }
}
.sidenav {
    height: 100%;
    width: 150px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: white;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
    font-family: 'Playfair Display', serif;
}

.sidenav a {
  padding: 8px 8px 8px 17px;
  text-decoration: none;
  font-size: 18px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.sidenav a:hover {
    color: #f1f1f1;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.sidenav img {
  width: 35%;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

/*
 *
 * Main
 *
 */

main {

  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

#main {
    transition: margin-left .5s;
    padding: 16px;
}

.transform {
  transform: translate(56px,8px) rotate(270deg);
  font-size: 20px;
  font-family: 'Playfair Display', serif;
  letter-spacing: 5px;
  color: black;
}

.quote {
  transform: translate(174px,260px);
  animation-name: appear;
  animation-duration: 4s;
  animation-timing-function: ease-in;
  animation-delay: 3s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  font-family: 'Spectral SC', serif;
  font-size: 25px;
  opacity: 0;
}

.about {
  display: flex;
  width: 100%;
  margin: 15px;
  color: black;
}
.aboutImage {
  border: 4px solid black;

}

.bio {
  text-align: center;
  padding-left: 5px;

}

@keyframes appear {
  0%{
    opacity: 0;

  }
  25%{
    opacity: 0.2;
  }
  50%{
    opacity: 0.5;
  }
  75%{
    opacity: 0.8;
  }
  100%{
    opacity: 1;
  }
}

.link {
  display: flex;
  justify-content:center;
}

.link i {
padding: 10px;
text-align: center;
  color: black;
}

.projects {
   margin: 0 auto;
   max-width: 1200px;
   padding: 0 1rem;
   margin-top: 5em;
   color: black;
 }

 .projects img:hover {
  opacity: 0.5;

 }

 .projects h4 {
   margin: 5px;
 }

 .responsive-image {
   max-width: 100%;
 }

 .cell img {
  display: block;
}
@media screen and (min-width: 600px) {
  .grid {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
  }
}
  @media screen and (min-width: 1000px) {
  .cell {
    width: calc(100% / 3);
  }
}
  .cell {
    width: 50%;
    animation: 3s fadein 1.1s forwards;
    opacity: 0;
  }

  @media screen and (max-width: 1200px) {
  .quote {
        transform: translate(55px,268px);
        font-size: 18px;
  }
}

@media screen and (max-width: 400px) {
  .quote {
        transform: translate(-32px,200px);
        font-size: 13px;
  }
}

@media screen and (max-width: 800px) {
  .quote {
        transform: translate(-32px,200px);
        font-size: 18px;
  }
}

@media screen and (max-width: 700px) {
  .about {
        flex-wrap: wrap;
  }
}

/*
 *
 * Footer
 *
 */

